--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
-*{
+* {
     margin: 0;
     padding: 0;
 }
-body{
-    background: rgb(245, 248, 255); 
+
+body {
+    background: rgb(245, 248, 255);
 }
 
 /* Raleway font----- */
@@ -39,7 +40,7 @@ body{
     color: #252432;
 }
 
-button:hover{
+button:hover {
     background-color: goldenrod;
     color: black;
 }
@@ -60,9 +61,9 @@ nav {
     justify-content: space-between;
     align-items: center;
     margin: 0 auto;
-     width: 1140px;
-     height: 120px;
-    
+    width: 1140px;
+    height: 120px;
+
 }
 
 nav .logo {
@@ -73,11 +74,11 @@ nav .logo {
 
 /* banner style---- */
 .banner {
-   max-width: 900px;
+    max-width: 900px;
     margin: 150px 260px;
     text-align: center;
     height: 237px;
-    
+
 }
 
 .banner-title {
@@ -91,7 +92,7 @@ main {
     max-width: 1140px;
     margin: 0 auto;
 }
-    
+
 
 /* web flow style------ */
 .web-flow {
@@ -101,11 +102,11 @@ main {
     gap: 23px;
     height: 328px;
     margin-top: 100px;
-     
-    
+
+
 }
 
-.web-flow-text-container{
+.web-flow-text-container {
     width: 500px;
 }
 
@@ -128,52 +129,110 @@ main {
 }
 
 /* productive-users style----- */
-.productive-users{
-background: rgba(78, 71, 255, 0.1);
-margin-top: 100px;
-border-radius: 24px;
-padding: 50px 80px 50px 80px;
+.productive-users {
+    background: rgba(78, 71, 255, 0.1);
+    margin-top: 100px;
+    border-radius: 24px;
+    padding: 50px 80px 50px 80px;
 
 }
 
-.productive-users-elements-container{
+.productive-users-elements-container {
     width: 850px;
     margin: 0 auto;
-    
+
 }
 
-.productive-users-title{
+.productive-users-title {
     font-size: 38px;
     font-weight: 700;
     text-align: center;
     margin-bottom: 40px;
 
-    
+
 }
 
-.productive-users-stat{
+.productive-users-stat {
     display: flex;
     justify-content: space-between;
-    
+
 }
 
-.productive-users-stat h1{
+.productive-users-stat h1 {
     color: #4E47FF;
     font-weight: 700;
     font-size: 80px;
 }
 
-.productive-users-stat p{
+.productive-users-stat p {
     font-size: 20px;
     font-weight: 400;
     color: rgba(0, 0, 0, 0.5);
     text-align: center;
 }
 
+/* users feedback---- */
+.users-feedback {
+    height: 342px;
+    margin-top: 100px;
+}
 
+.users-feedback-title {
+    text-align: center;
+    color: #252432;
+    font-size: 42px;
+    font-weight: 700;
+}
+
+.feedback-cards-container {
+    margin-top: 50px;
+    display: flex;
+    justify-content: space-between;
+    gap: 24px;
+   
+}
+
+.card{
+    box-sizing: border-box;
+    border: 1px solid rgb(242, 237, 237);
+    border-radius: 14px;
+    background: rgba(255, 255, 255, 0.5);
+     padding: 24px;
+}
+
+.users-feedback-sub-title{
+font-weight: 600;
+font-style: 24px;
+color: #1E1E1E;
+margin: 12px 0;
+}
+
+.description{
+    font-weight: 400;
+    font-style: 16px;
+    color: #1E1E1E;
+}
+
+.review {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin-top: 24px;
+
+}
+
+.review p{
+    font-weight: 600;
+    font-style: 16px;
+    color: #757575;
+}
+
+.review img{
+    border-radius: 100%;
+}
 
 /* focus better styles----- */
-.focus-better{
+.focus-better {
     background-color: #FFFFFF;
     margin-top: 100px;
     text-align: center;
@@ -181,14 +240,14 @@ padding: 50px 80px 50px 80px;
     padding: 71px 150px 71px 150px;
 }
 
-.focus-better-title{
+.focus-better-title {
     color: #000000;
     font-size: 50px;
     font-weight: 700;
     margin: 20px 0px;
 }
 
-.focus-better p{
+.focus-better p {
     font-size: 16px;
     font-weight: 400;
     color: #00000080;
@@ -197,14 +256,14 @@ padding: 50px 80px 50px 80px;
 }
 
 
-.focus-better img{
+.focus-better img {
     margin-top: 15px;
     border-radius: 48px;
     height: 364px;
 }
 
 /* Get In Touch styles----- */
-.lets-get-in-touch{
+.lets-get-in-touch {
     height: auto;
     margin-top: 100px;
     display: flex;
@@ -215,41 +274,44 @@ padding: 50px 80px 50px 80px;
 }
 
 
-.touch-title-container{
+.touch-title-container {
     width: 70%;
     align-items: center;
 }
-.get-in-touch-title{
-     font-size:97px;
+
+.get-in-touch-title {
+    font-size: 97px;
     font-weight: 700;
-    
+
 }
 
-.form-container{
+.form-container {
     width: 30%;
 }
 
-.form-container form{
+.form-container form {
     width: 100%;
 }
 
-.form-container button{
+.form-container button {
     width: 100%;
 }
 
 
-.lets-get-in-touch input[type='text'], .lets-get-in-touch input[type='email'], .lets-get-in-touch textarea{
+.lets-get-in-touch input[type='text'],
+.lets-get-in-touch input[type='email'],
+.lets-get-in-touch textarea {
     display: block;
     height: 70px;
     border-radius: 10px;
     background: rgb(255, 255, 255);
     width: 100%;
     margin-bottom: 19px;
-    border: 1px solid rgb(214, 221, 237);   
-    
+    border: 1px solid rgb(214, 221, 237);
+
 }
 
-::placeholder{
+::placeholder {
     padding: 10px;
     font-size: 20px;
     font-weight: 400;
@@ -259,7 +321,7 @@ padding: 50px 80px 50px 80px;
 
 
 /* footer styles---- */
-footer{
+footer {
     width: 100%;
     height: 400px;
     margin-top: 14px;
@@ -269,38 +331,38 @@ footer{
     align-items: center;
 }
 
-.footer-container{
+.footer-container {
     width: 530px;
     height: 220px;
     text-align: center;
 }
 
-footer .footer-logo{
+footer .footer-logo {
     font-size: 100px;
     font-weight: 900;
     color: #4E47FF;
 }
 
- ul{
+ul {
     display: flex;
     justify-content: center;
     align-items: center;
     margin: 15px;
     gap: 30px;
- }
+}
 
- ul a{
+ul a {
     text-decoration: none;
- }
+}
 
- ul li{
+ul li {
     list-style: none;
- }
+}
 
 
-.footer-container a, p{
+.footer-container a,
+p {
     color: #8987A1;
     font-weight: 400;
     font-size: 16px;
 }
-
