--- a/style.css
+++ b/style.css
@@ -114,12 +114,15 @@ main {
     font-size: 42px;
     font-weight: 700;
     margin-bottom: 23px;
+    color: #252432;
 }
 
 .web-flow-sub-title {
     font-size: 24px;
+    font-weight: 400;
     opacity: 50%;
     margin-bottom: 23px;
+    color: rgba(37, 36, 50, 0.5);
 }
 
 .web-flow-image {
@@ -148,6 +151,7 @@ main {
     font-weight: 700;
     text-align: center;
     margin-bottom: 40px;
+    color: #252432;
 
 
 }
@@ -221,10 +225,14 @@ margin: 12px 0;
 
 }
 
-.review p{
+.reviewer-name{
     font-weight: 600;
     font-style: 16px;
     color: #757575;
+}
+.date{
+    color: #B3B3B3;
+    font-style: 16px;
 }
 
 .review img{
@@ -309,6 +317,10 @@ margin: 12px 0;
     margin-bottom: 19px;
     border: 1px solid rgb(214, 221, 237);
 
+}
+
+.lets-get-in-touch textarea {
+    height: 100px;
 }
 
 ::placeholder {
